--- a/templates/js/wcss.css
+++ b/templates/js/wcss.css
@@ -1,5 +1,5 @@
 .title{
-	display:none;
+	display:block;
         position:absolute;
         top:0%;
         left:0%;
@@ -400,4 +400,67 @@
 	left:220px;
 	border:1px solid black;
 	z-index:1003;
+}
+.perm{
+	display:none;
+	position:absolute;
+	top:5%;
+	left:20%;
+	width:70%;
+	height:390px;
+	text-align:left;
+	background:white;
+	z-index:1002;
+}
+.perms{
+	display:block;
+	position:absolute;
+	top:70px;
+	left:10px;
+	width:94%;
+	height:240pxx;
+	border:1px solid black;
+}
+.permlist{
+	display:block;
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:20px;
+	background:lightblue;
+	opacity:0.8;
+	border:1px solid black;
+}
+.button_addperm{
+	display:block;
+	position:absolute;
+	top:40px;
+	left:50px;
+	border:1px solid black;
+	z-index:1003;
+}
+
+
+.addperm{
+	display:block;
+        position:absolute;
+        top:40px;
+        left:10px;
+	width:600px;
+	height:200px;
+	background:white;
+        border:2px solid lightblue;
+        z-index:1008;
+}
+.Assignrole{                                               /* 用户编辑窗口 */
+	display:none;
+	position:absolute;
+	top:47px;
+	left:20%;
+	width:500px;
+	height:260px;
+	background:white;
+	z-index:1008;
+	
 }
